css/style.css
@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Poppins:wght@300&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 10px;
}

body {
  font-family: poppins, sans-serif;
  margin: 0px;
  max-width: 100%;
  overflow-x: hidden;
}

#main-nav {
  display: flex;
  width: 100%;
  margin: 0 auto;
  z-index: 2;
}

.mobile-nav {
  display: none;
}

.nav-links {
  display: flex;
  flex-direction: row;
  width: 80%;
  align-self: center;
}

nav {
  background-color: #415a76;
  padding: 10px;
  text-align: center;
  width: 100%;
  position: sticky;
  top: 0px;
}

nav a {
  color: white;
  text-decoration: none;
  margin: 0px 20px;
  font-size: 1.3em;
  font-weight: bold;
}

.site-language {
  display: inline;
  width: 20%;
  order: 2;
}

.language-icon {
  width: 3rem;
  height: 3rem;
  opacity: 0.5;
}

.language-icon section {
  min-height: 100vh;
  max-width: 90vw;
  margin: 0px auto;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

#layout-container {
  width: 90vw;
  margin: 0 auto;
  overflow-x: hidden;
  background-image: url("../images/sky.jpg"), linear-gradient(#eb01a5, #d13531);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}

section {
  padding-top: 3rem;
}

section#header {
  /* background-color: #f1f9f8; */
  min-height: 8vh;
}

section#section-header2 {
  min-height: 20rem;
  /* background-color: #f1f9f8; */
}

section#section-intro {
  background-color: rgba(191, 213, 226, 0.7);
}

section#section-consult p {
  text-align: left;
}

article {
  width: 90vw;
  max-width: 90vw;
  padding: 20px;
  margin: 0px auto;
}

#section-consult-child article {
  width: 100vw;
  max-width: 100vw;
}

#section-consult-child .sub-section-teen {
  padding-bottom: 10rem;
}

li {
  font-size: 1.5em;
  text-align: left;
  list-style: none;
  margin-bottom: 0.75rem;
}

li:last-child {
  margin-bottom: 0;
}

.header-text-box {
  align-self: center;
}

img {
  border-radius: 1.5rem;
  width: 75%;
}

.subject-container,
.termin-cards {
  justify-content: center;
  align-items: center;
  grid-column-gap: 1rem;
}

.subject-container figure {
  border: 1px solid black;
  align-items: center;
}

figcaption {
  font-size: 1.5rem;
  margin-top: 1rem;
}

.btn:link,
.btn:visited {
  background-color: #087f5b;
  color: #fff;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 500;
  display: inline-block;
  border-radius: 100px;
}

.btn:hover,
.btn:active {
  background-color: #099268;
}

.btn--big {
  font-size: 2rem;
  padding: 1.6rem 3.2rem;
  width: 80%;
  text-align: center;
}

.btn--small {
  font-size: 14px;
  padding: 8px 12px;
}

.termin-card {
  box-shadow: 0 2rem 3rem 0 rgba(0, 0, 0, 0.2);
  border-radius: 1.2rem;
  background-color: aliceblue;
}
.termin-card img {
  width: 100%;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.feature-box {
  background-color: rgba(255, 255, 255, 0.8);
  font-size: 1.5rem;
  padding: 2.5rem;
  text-align: center;
  border-radius: 3px;
  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.5);
  transition: transform 0.8s;
}

.feature-box:hover {
  transform: translateY(-0.3rem) scale(1.01);
}
.feature-box p {
  font-size: 1.5rem;
}

/*Start Social Media Icons*/
.social-icon {
  color: #fff;
}
ul.social-icons {
  margin-top: 10px;
}

.social-icons li {
  vertical-align: top;
  display: inline;
  height: 100px;
}

.social-icons a {
  color: #fff;
  text-decoration: none;
}

.fa-facebook {
  padding: 10px 14px;
  -o-transition: 0.5s;
  -ms-transition: 0.5s;
  -moz-transition: 0.5s;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  background-color: #322f30;
}

.fa-facebook:hover {
  background-color: #3d5b99;
}

.fa-twitter {
  padding: 10px 12px;
  -o-transition: 0.5s;
  -ms-transition: 0.5s;
  -moz-transition: 0.5s;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  background-color: #322f30;
}

.fa-twitter:hover {
  background-color: #00aced;
}

.fa-rss {
  padding: 10px 14px;
  -o-transition: 0.5s;
  -ms-transition: 0.5s;
  -moz-transition: 0.5s;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  background-color: #322f30;
}

.fa-rss:hover {
  background-color: #eb8231;
}

.fa-youtube {
  padding: 10px 14px;
  -o-transition: 0.5s;
  -ms-transition: 0.5s;
  -moz-transition: 0.5s;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  background-color: #322f30;
}

.fa-youtube:hover {
  background-color: #e64a41;
}

.fa-instagram {
  padding: 10px 14px;
  -o-transition: 0.5s;
  -ms-transition: 0.5s;
  -moz-transition: 0.5s;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  background-color: #322f30;
}

.fa-instagram:hover {
  background: #f09433;
  background: -moz-linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  background: -webkit-linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  background: linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
}

/*End Social Media Icons*/

/*Start Google Maps*/

.time-container {
  display: flex;
  justify-content: center;
  gap: 3rem;
  margin: 1rem 3rem;
}

.hour-img {
  width: 4rem;
  margin-bottom: -2rem;
}

.contact-maps-container {
  display: flex;
  justify-content: center;
  gap: 3rem;
  margin: 0 3rem;
}

.time-card-wrapper {
  flex: 1;
}

.time-item {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 2px solid #023423;
  background-color: #fff;
  padding: 2rem;
  border-radius: 2rem;
  color: #086c4a;
  min-height: 13rem;
  margin-bottom: 1rem;
}

.time-item time {
  font-size: 1.8rem;
  font-weight: bold;
}

.contact-map-card {
  flex: 1;
  background-color: #fff;
  padding: 2rem;
  border-radius: 2rem;
}

.contact-map {
  display: inline-block;
  height: 40rem;
  width: 100%;
  border-radius: 1.5rem;
}

.contact-map-card .weekdays {
  justify-content: flex-start;
  gap: 1rem;
  margin: 1rem 0;
}

.contact-map-card .time-period {
  border: 2px solid #086c4a;
  background-color: #fff;
  color: #086c4a;
  padding: 2rem;
  border-radius: 1rem;
}

.day-item.open-day {
  background-color: #086c4a;
  color: #fff;
}

.day-item {
  /* border: 1px solid black; */
  min-width: 8rem;
  padding: 1rem;
  border-radius: 0.5rem;
  background-color: #b9b9b9;
  color: #8a8585;
  font-size: 1.4rem;
  text-align: center;
}
/*End Google Maps*/

.cardA {
  perspective: 150rem;
  -moz-perspective: 150rem;
  position: relative;
  height: 50rem;
  width: 45rem;
  display: inline-block;
}

.card-details {
  text-align: center;
  padding-top: 3rem;
}

.card-details li {
  font-size: 1.45rem;
  margin-bottom: 1rem;
  letter-spacing: 1px;
}

.card-details li::first-letter {
  font-weight: bolder;
  letter-spacing: 1.5px;
}

.card_side {
  min-height: 50rem;
  transition: all 0.8s ease;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  backface-visibility: hidden;
  border-radius: 1rem;
  overflow: hidden;
  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
  background-color: #fff;
}

.card-polygon {
  background-size: cover;
  height: 30rem;
  background-blend-mode: screen;
  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
}
.card-polygon img {
  width: 100%;
  border-radius: 0;
}

.color-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  opacity: 0.3; /* You can adjust the opacity as desired */
}

.color-overlay-child-A {
  background: linear-gradient(to right bottom, #ffbb00, #ff7730);
}

.color-overlay-child-B {
  background: linear-gradient(to right bottom, #7ed56f, #28b485);
}

.color-overlay-child-C {
  background: linear-gradient(to right bottom, #2998ff, #5643fa);
}

.color-overlay-teenager-A {
  background: linear-gradient(to right bottom, #ffb900, #ff7730);
}

.color-overlay-teenager-B {
  background: linear-gradient(to right bottom, #7ed56f, #28b485);
}

.color-overlay-adult-A {
  background: linear-gradient(to right bottom, #7ed56f, #28b485);
}

.color-overlay-adult-B {
  background: linear-gradient(to right bottom, #7ed56f, #28b485);
}

.color-overlay-family-A {
  background: linear-gradient(to right bottom, #7ed56f, #28b485);
}

.color-overlay-gameTherapy-A {
  background: linear-gradient(to right bottom, #7ed56f, #bc1487);
}

/*
 cards
*/
.cards {
  font-size: 1.5rem;
}

.card1s {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 12rem;
}

.card1 {
  width: 80rem;
  height: 25rem;
  border-radius: 0.8rem;
  display: flex;
  align-items: center;
  gap: 4rem;
  background-color: beige;
  align-self: flex-start;
}

.card1:nth-child(even) {
  align-self: flex-end;
}

.card1 img {
  border-radius: 0;
  transform: scale(1.15);
  /*scale images proportionally*/
  /*box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);*/

  width: auto;
  height: 100%;
}

/*flex-row second element*/
.card1 .img-container {
  display: inline-block;
  flex: 0 1 20rem;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: 20rem;
  height: 100%;
}

.img-container:nth-child(even) {
  order: 2;
}

/*flex-row second element*/
.card1 .card-info {
  display: inline-block;
  /*flex: 3 1 auto;*/
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: auto;

  align-items: center;
  justify-content: center;
}

.option-A .card1,
.option-A .card1 img {
  height: 20rem;
}

